--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tu Aliado en Regulación Sanitaria</title>
+  <title>CARVELE - Tu Aliado en Regulación Sanitaria</title>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -839,4 +839,5 @@
 <script src="Pagina.js" defer></script>
 </body>
 </html>
+
 
